Examples/Parser_Test/iptables-save
# Generated by iptables-save v1.4.21 on Wed Jun 17 09:32:03 2015
*filter
:INPUT ACCEPT [163:45108]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [163:45108]
:DOS~Pro-t_ect - [0:0]
:Terminal - [0:0]
-A FORWARD -s 127.0.0.0/8 -j DROP
-A FORWARD ! -i eth+ -j DROP
-A FORWARD -s 100.0.0.0/24 -p tcp -j DOS~Pro-t_ect
-A DOS~Pro-t_ect -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD ! -s 131.159.0.0/16 -j DROP
-A FORWARD -p tcp -m multiport --dports 80,443 -j RETURN
-A FORWARD -d 127.0.0.1/32 -o eth1.152 -p udp -m multiport --dports 4569,5000:65535 -j ACCEPT
-A FORWARD -i eth0 -p tcp -m multiport --dports 21,873:800,5005,5006,80,548,111,892,2049 -j DROP
-A FORWARD -g Terminal
-A DOS~Pro-t_ect -p tcp -m state --state NEW -m tcp --dport 1:65535 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A DOS~Pro-t_ect -p udp -j RETURN
-A DOS~Pro-t_ect -p icmp -j ACCEPT
-A Terminal -d 127.0.0.1/32 -p udp -m udp --sport 53 -j DROP
-A Terminal -d 127.42.0.1 -j REJECT
-A Terminal -j REJECT --reject-with icmp-net-prohibited
COMMIT
# Completed on Wed Jun 17 09:32:03 2015
